Modif type input

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                         Nom : <input id="inputName" type="text" placeholder="Nom...">
                     </div>
                     <div id="coordonnes">
-                        Coordonnées : <input class="inputGps" id="inputLong" type="number" placeholder="Longitude...">
-                        <input class="inputGps" id="inputLatt" type="number" placeholder="Latitude...">
+                        Coordonnées : <input class="inputGps" id="inputLong" type="text" placeholder="Longitude...">
+                        <input class="inputGps" id="inputLatt" type="text" placeholder="Latitude...">
                     </div>
                     <div id="color">
                         Couleur de votre marqueur : <input id="inputColor" type="text" placeholder="#000000">
