--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
                         Nom : <input id="inputName" type="text" placeholder="Nom...">
                     </div>
                     <div id="coordonnes">
-                        Coordonnées : <input class="inputGps" id="inputLong" type="text" placeholder="Longitude...">
-                        <input class="inputGps" id="inputLatt" type="text" placeholder="Latitude...">
+                        Coordonnées :
+                        <div id="structgps"> <input class="inputGps" id="inputLong" type="text"
+                                placeholder="Longitude...">
+                            <input class="inputGps" id="inputLatt" type="text" placeholder="Latitude...">
+                        </div>
                     </div>
                     <div id="color">
                         Couleur de votre marqueur : <input id="inputColor" type="text" placeholder="#000000">
